--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <canvas id="court"></canvas>
         <div id="score">0 : 0</div>
+        <p title="Controls"> R-start/reset </p>
         <script type="module" src="./main.js"></script>
     </body>
 </html>
